# commonguide-mkdocs-plugin

./: Pipfile  pyproject.toml
src/commonguide_mkdocs_plugin/: config.py  plugin.py
